fix: error in siblings margin-collapsing because of change of get_ref_y() functionality

--- a/examples/style.css
+++ b/examples/style.css
@@ -1,11 +1,9 @@
 div {
-  background-color: blue;
 }
 
 p {
 }
 
 .pw {
-  color: white;
 }
 
